--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^8.0.2",
     "hammerjs": "^2.0.8",
     "immutable": "^4.0.0-rc.12",
+    "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
